fix stretch

--- a/src/componets/style.css
+++ b/src/componets/style.css
@@ -5,8 +5,13 @@
   flex-flow: nowrap;
   transition: all 1s cubic-bezier(0.27, 0.75, 0.71, 0.97);
   overflow-x: visible;
-  align-items: center;
+  align-items: stretch;
 }
+.kc_slider_container {
+  align-items: stretch;
+  display: flex;
+}
+
 .kc_slider .box {
   width: 100%;
   height: 100%;
@@ -19,6 +24,7 @@
   padding-right: 0.25%;
   transition: all 0.2s ease;
   cursor: pointer;
+  height: 100%;
 }
 .kc_slider .boxNoEffects {
   width: 100%;
@@ -34,6 +40,7 @@
 .kc_slider .box img {
   width: 100%;
   margin-top: 0px;
+  height: 100%;
 }
 .kc_slider .boxNoEffects img {
   width: 100%;
