--- a/src/componets/style.rtl.css
+++ b/src/componets/style.rtl.css
@@ -4,9 +4,14 @@
   width: 100%;
   flex-flow: nowrap;
   transition: all 1s cubic-bezier(0.27, 0.75, 0.71, 0.97);
-  align-items: flex-end;
   overflow-x: visible;
+  align-items: stretch;
 }
+.kc_slider_container {
+  align-items: stretch;
+  display: flex;
+}
+
 .kc_slider .box {
   width: 100%;
   height: 100%;
@@ -19,6 +24,7 @@
   padding-left: 0.25%;
   transition: all 0.2s ease;
   cursor: pointer;
+  height: 100%;
 }
 .kc_slider .boxNoEffects {
   width: 100%;
@@ -34,6 +40,7 @@
 .kc_slider .box img {
   width: 100%;
   margin-top: 0px;
+  height: 100%;
 }
 .kc_slider .boxNoEffects img {
   width: 100%;
@@ -296,7 +303,16 @@
     right: 10%;
   }
 }
-
+.kc_slider .box.big:hover {
+  transform: scale(1.07);
+  margin-right: 1%;
+  margin-left: 1%;
+}
+.kc_slider .box.small:hover {
+  transform: scale(1.09);
+  margin-right: 0.6%;
+  margin-left: 0.6%;
+}
 /* sizes */
 
 /* small */
@@ -356,10 +372,5 @@
     max-width: 19.5%;
     margin-right: 0%;
     margin-left: 0%;
-  }
-  .kc_slider .box.big:hover {
-    transform: scale(1.07);
-    margin-right: 1%;
-    margin-left: 1%;
   }
 }
